# doc/openapi.yaml
@@ -3,9 +3,157 @@ info:
   title: Social Network API
   version: 0.1.0
 paths:
+  /post:
+    post:
+      summary: Создание поста
+      operationId: create_post_post_post
+      parameters:
+        - name: session-key
+          in: header
+          required: true
+          schema:
+            type: string
+            format: uuid
+            title: Session-Key
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PostCreate'
+      responses:
+        '200':
+          description: Successful Response
+          content:
+            application/json:
+              schema: {}
+        '422':
+          description: Validation Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPValidationError'
+    put:
+      summary: Обновление контента поста
+      operationId: update_post_post_put
+      parameters:
+        - name: session-key
+          in: header
+          required: true
+          schema:
+            type: string
+            format: uuid
+            title: Session-Key
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PostUpdate'
+      responses:
+        '200':
+          description: Successful Response
+          content:
+            application/json:
+              schema: {}
+        '422':
+          description: Validation Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPValidationError'
+  '/post/{post_id}':
+    delete:
+      summary: Удаление поста
+      operationId: delete_post_post__post_id__delete
+      parameters:
+        - name: post_id
+          in: path
+          required: true
+          schema:
+            type: integer
+            title: Post Id
+        - name: session-key
+          in: header
+          required: true
+          schema:
+            type: string
+            format: uuid
+            title: Session-Key
+      responses:
+        '200':
+          description: Successful Response
+          content:
+            application/json:
+              schema: {}
+        '422':
+          description: Validation Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPValidationError'
+    get:
+      summary: Получить пост
+      operationId: get_post_post__post_id__get
+      parameters:
+        - name: post_id
+          in: path
+          required: true
+          schema:
+            type: integer
+            title: Post Id
+        - name: session-key
+          in: header
+          required: true
+          schema:
+            type: string
+            format: uuid
+            title: Session-Key
+      responses:
+        '200':
+          description: Successful Response
+          content:
+            application/json:
+              schema: {}
+        '422':
+          description: Validation Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPValidationError'
+  '/posts/{user_login}':
+    get:
+      summary: Получить все посты по конкретному логину
+      operationId: get_posts_posts__user_login__get
+      parameters:
+        - name: user_login
+          in: path
+          required: true
+          schema:
+            type: string
+            title: User Login
+        - name: session-key
+          in: header
+          required: true
+          schema:
+            type: string
+            format: uuid
+            title: Session-Key
+      responses:
+        '200':
+          description: Successful Response
+          content:
+            application/json:
+              schema: {}
+        '422':
+          description: Validation Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPValidationError'
   /user:
     put:
-      summary: Update user info
+      summary: Обновление информации о пользователе
       operationId: update_info_user_put
       requestBody:
         content:
@@ -26,7 +174,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/HTTPValidationError'
     post:
-      summary: Create new user
+      summary: Создать нового пользователя
       operationId: create_user_user_post
       requestBody:
         content:
@@ -91,6 +239,28 @@ components:
           title: Detail
       type: object
       title: HTTPValidationError
+    PostCreate:
+      properties:
+        content:
+          type: string
+          title: Content
+      type: object
+      required:
+        - content
+      title: PostCreate
+    PostUpdate:
+      properties:
+        id:
+          type: integer
+          title: Id
+        content:
+          type: string
+          title: Content
+      type: object
+      required:
+        - id
+        - content
+      title: PostUpdate
     RegisterData:
       properties:
         login:
